fix: overflow hidden

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     background-color: rgb(2, 4, 36);
     color: #f2f2f2;
     position: relative;
+    overflow: hidden;
 }
 
 .image{
